--- a/styles.css
+++ b/styles.css
@@ -1,152 +1,285 @@
-* {
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .todo-container {
-    width: 1000px;
-    height: 80vh;
-    display: flex;
-  }
-  
-  .status {
-    width: 25%;
-    background-color: #f3f3f3;
-    position: relative;
-    padding: 60px 1rem 0.5rem;
-  }
-  
-  .status:nth-child(even) {
-    background-color: #e9e9e96b;
-  }
-  
-  .status h1 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #343434;
-    color: #f3f3f3;
+*{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif,Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 15px;
+}
+body{
     width: 100%;
-    padding: 0.5rem 1rem;
-  }
-  
-  #add_btn {
-    padding: 0.5rem 1rem;
-    background-color: #ccc;
-    outline: none;
-    border: none;
-    width: 100%;
-    font-size: 1.5rem;
-    margin: 0.5rem 0;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  #add_btn:hover {
-    background-color: #aaa;
-  }
-  
-  .todo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    height:auto;
+    background: url("AvhsQod\ \(1\).jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    overflow: hidden;
+    background-color: rgb(47, 99, 82); 
     position: relative;
-    background-color: #fff;
-    box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px,
-      rgba(15, 15, 15, 0.1) 0px 2px 4px;
-    border-radius: 4px;
-    padding: 0.5rem 1rem;
-    font-size: 1.5rem;
-    margin: 0.5rem 0;
-  }
-  
-  .todo .close {
-    position: absolute;
-    right: 1rem;
-    top: 0rem;
-    font-size: 2rem;
-    color: #ccc;
-    cursor: pointer;
-  }
-  
-  .todo .close:hover {
-    color: #343444;
-  }
-  
-  /* modal */
-  
-  .close-modal {
-    background: none;
-    border: none;
-    font-size: 1.5rem;
-  }
-  
-  .modal {
-    width: 450px;
-    position: fixed;
-    top: -50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: top 0.3s ease-in-out;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    z-index: 2;
-    background-color: #fff;
-  }
-  
-  .modal.active {
-    top: 15%;
-  }
-  
-  .modal .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #ccc;
-    padding: 0.5rem;
-    background-color: rgba(0, 0, 0, 0.05);
-  }
-  
-  .modal .body {
-    padding: 0.75rem;
-  }
-  
-  #overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-  }
-  
-  #overlay.active {
-    display: block;
-  }
-  
-  #todo_input, 
-  #descrption, 
-  #todo_submit {
-    padding: 0.5rem 1rem;
-    width: 100%;
-    margin: 0.25rem;
-  }
-  
-  #todo_submit {
-    background-color: #4caf50;
-    color: #f3f3f3;
-    font-size: 1.25rem;
-    border: none;
-  }
-  
+}
 
- 
+
+.header{
+    margin-top: 12px;
+    position: relative;
+    left: 420px;
+}
+.add-input{
+    position: relative;
+    top: 5px;
+    right: 65px;
+    width: 520px;
+    height: 45px;
+    border-radius: 6px;
+    border: solid 1px #fff;
+    color: white;
+    padding-left: 6px;
+    font-size: 22px;
+    background: rgba(17, 17, 17, 0.3);
+    
+   
+}
+.add-btn{
+    position: relative;
+    top: 3px;
+    right: 318px;
+    height: 48px;
+    width: 78px;
+    border-radius:6px ;
+    cursor: pointer;
+    /* background: #ffffff; */
+}
+/* button css try */
+
+
+/* end of try css */
+.container{
+    max-width: 100%;
+   /* background-color: antiquewhite; */
+   height: 550px;
+   display: flex; 
+   justify-content: space-around;
+   position: relative;
+   left: 3px;
+   top: 65px;
+   right: 20%;
+}
+
+.container-list {
+    overflow:auto;
+    margin-right:4px;
+    width: 440px;
+    height: 442px;
+    background-color: rgba(242, 233, 233, 0.259);
+    border-radius:5px ;
+}
+.box{
+    width: 320px;
+    height: 442px;
+    /* background-color: rgba(242, 233, 233, 0.259); */
+    border-radius:5px ;
+    background-color: #4ae7a6;
+}
+
+#box1{
+    margin: 4px;
+    text-align: center;
+}
+#box2{
+    margin: 4px;
+    text-align: center;
+
+}
+#box3{
+    margin: 4px;
+    text-align: center;
+
+}
+#box4{
+    margin: 4px;
+    text-align: center;
+
+}
+.heading{
+    margin: 15px;
+}
+.heading h2{
+    color: #1e0341;
+    font-weight: bolder;
+}
+.container-list1{
+    overflow:auto;
+}
+.container-list1-item{
+    background-color: #ffff;
+    width:285px ;
+    height: 120px;
+    margin-left: 8px;
+    border-radius: 3px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+.item-color{
+    width: 32px;
+    height: 8px;
+    position: relative;
+    left: 6px;
+    top: 5px;
+    border-radius: 5px;
+    background-color:#d1b500;
+}
+#box2 .item-color{
+    width: 32px;
+    height: 8px;
+    position: relative;
+    left: 6px;
+    top: 5px;
+    border-radius: 5px;
+    background-color: #4ae7a6;
+}
+#box3 .item-color{
+    width: 32px;
+    height: 8px;
+    position: relative;
+    left: 6px;
+    top: 5px;
+    border-radius: 5px;
+    background-color: #3200b1;
+}
+#box4 .item-color{
+    width: 32px;
+    height: 8px;
+    position: relative;
+    left: 6px;
+    top: 5px;
+    border-radius: 5px;
+    background-color: rgb(17, 139, 17);
+}
+.item-heading{
+  margin-top: 3px;
+  margin-left: 6px;
+}
+.description{
+    display: flex;
+    justify-content: space-evenly;
+    width: 278px;
+    height: 40px;
+    overflow: auto;
+}
+.desc-para{
+    background-color: rgba(250, 247, 245, 0.9);
+    width: 248px;
+    height: 67px;
+    padding: 5px;
+    font-size: 4rem;
+   
+}
+/* .desc-btn{
+    margin-top: 52px;
+    margin-left: 249px;
+    width: 15px;
+    height: 15px; */
+    /* border-radius: 50%;
+    border: solid 3px #d1b500;
+    background-color: #ffffff;
+}
+#box2 .desc-btn{
+    margin-top: 30px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: solid 3px #4ae7a6;
+    background-color: #ffffff;
+}
+#box3 .desc-btn{
+    margin-top: 30px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: solid 3px #3200b1;
+    background-color: #ffffff;
+}
+#box4 .desc-btn{
+    margin-top: 30px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: solid 3px #e74a4a;
+    background-color: #ffffff;
+} */
+.dragging{
+   border:  2px dotted cyan;
+}
+
+.modle-container {
+    position: absolute;
+    top: 25%;
+    left: 35%;
+    background-color: #ff004f;
+    width: 30%;
+}
+
+.editInput {
+    margin: 20px;
+}
+
+button {
+    width: 20%;
+    margin-left: 20%;
+}
+button:hover {
+    background-color: #ff004f;
+}
+
+.modle-container-style {
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
+lable {
+    color: black;
+    margin: 10px;
+    font-weight: bolder;
+}
+
+.delete {
+    margin-top: 3px;
+    margin-left: 235px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: solid 3px #d1b500;
+    background-color: #ffffff;
+}
+
+#box2 .delete {
+    margin-top: 3px;
+    margin-left: 235px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: solid 3px #4ae7a6;
+    background-color: #ffffff;
+}
+
+#box3 .delete {
+    margin-top: 3px;
+    margin-left: 235px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: solid 3px #3200b1;
+    background-color: #ffffff;
+}
+
+#box4 .delete {
+    margin-top: 3px;
+    margin-left: 235px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: solid 3px rgb(17, 139, 17);
+    background-color: white;
+}
